// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> renders text 1`] = `
<div>
  <span
    class="sc-aXZVg giCCCb"
  >
    A simple text
  </span>
</div>
`;

exports[`<Text /> renders text with fontSize 1`] = `
<div>
  <span
    class="sc-aXZVg lnfOTt"
  >
    A large text
  </span>
</div>
`;

exports[`<Text /> renders text with fontWeight 1`] = `
<div>
  <span
    class="sc-aXZVg jscqkk"
  >
    A bold text
  </span>
</div>
`;

exports[`<Text /> renders text with variant 1`] = `
<div>
  <span
    class="sc-aXZVg goYjhr"
  >
    A colored text
  </span>
</div>
`;
